--- a/MilitaryRoboticSystemMaintenance.ipynb
+++ b/MilitaryRoboticSystemMaintenance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "ea99c0f8",
    "metadata": {},
    "outputs": [],
@@ -13,13 +13,20 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import classification_report, confusion_matrix, roc_curve, auc\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n"
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import GRU, Dense, Dropout\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import f1_score, accuracy_score\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "13442ff7",
    "metadata": {},
    "outputs": [],
@@ -40,27 +47,16 @@
     "        'system_temperature': current_temperature,\n",
     "        'power_unit_temperature': setpoint_temperature,\n",
     "        'ambient_temperature': ambient_temperature,\n",
-    "        'system_vibration':\n",
-    "        np.random.uniform(0.1, 2.5, n_samples),\n",
-    "        'power_unit_vibration':\n",
-    "        np.random.uniform(0.2, 3.0, n_samples),\n",
-    "        'hydraulic_pressure':\n",
-    "        np.random.uniform(1000, 3000,\n",
-    "        n_samples),\n",
-    "        'voltage_fluctuation':\n",
-    "        np.random.uniform(-0.5, 0.5, n_samples),\n",
-    "        'current_draw':\n",
-    "        np.random.uniform(10, 30, n_samples),\n",
-    "        'operational_hours':\n",
-    "        np.random.uniform(0, 5000, n_samples),\n",
-    "        'duty_cycle':\n",
-    "        np.random.uniform(20, 90, n_samples),\n",
-    "        'load_capacity':\n",
-    "        np.random.uniform(40, 100, n_samples),\n",
-    "        'days_since_maintenance':\n",
-    "        np.random.uniform(0, 365, n_samples),\n",
-    "        'previous_failures':\n",
-    "        np.random.poisson(0.5, n_samples)\n",
+    "        'system_vibration': np.random.uniform(0.1, 2.5, n_samples),\n",
+    "        'power_unit_vibration':  np.random.uniform(0.2, 3.0, n_samples),\n",
+    "        'hydraulic_pressure': np.random.uniform(1000, 3000,n_samples),\n",
+    "        'voltage_fluctuation': np.random.uniform(-0.5, 0.5, n_samples),\n",
+    "        'current_draw': np.random.uniform(10, 30, n_samples),\n",
+    "        'operational_hours': np.random.uniform(0, 5000, n_samples),\n",
+    "        'duty_cycle': np.random.uniform(20, 90, n_samples),\n",
+    "        'load_capacity': np.random.uniform(40, 100, n_samples),\n",
+    "        'days_since_maintenance': np.random.uniform(0, 365, n_samples),\n",
+    "        'previous_failures': np.random.poisson(0.5, n_samples)\n",
     "        }\n",
     "        failure_probability = (\n",
     "            0.3 * (data['system_temperature'] > 70).astype(int) +\n",
@@ -84,21 +80,35 @@
     "        X_scaled = self.scaler.fit_transform(X)\n",
     "        return train_test_split(X_scaled, y, test_size=0.3, random_state=42)\n",
     "    def train_model(self, X_train, y_train):\n",
-    "        self.model = RandomForestClassifier(\n",
-    "            n_estimators=100,\n",
-    "            max_depth=10,\n",
-    "            min_samples_split=5,\n",
-    "            min_samples_leaf=2,\n",
+    "        rf = RandomForestClassifier(random_state=42)\n",
+    "        param_dist = {\n",
+    "            'n_estimators': np.arange(50, 300, 50), \n",
+    "            'max_depth': [5, 10, 15, 20, None],\n",
+    "            'min_samples_split': [2, 5, 10, 20],\n",
+    "            'min_samples_leaf': [1, 2, 4, 8],   \n",
+    "            'max_features': ['sqrt', 'log2', None],\n",
+    "            'bootstrap': [True, False]                 \n",
+    "        }\n",
+    "        random_search = RandomizedSearchCV(\n",
+    "            estimator=rf,\n",
+    "            param_distributions=param_dist,\n",
+    "            n_iter=30,\n",
+    "            cv=5,\n",
+    "            scoring='f1',\n",
+    "            verbose=1,\n",
+    "            n_jobs=-1,\n",
     "            random_state=42\n",
     "        )\n",
-    "        self.model.fit(X_train, y_train)\n",
+    "        random_search.fit(X_train, y_train)\n",
+    "        self.model = random_search.best_estimator_\n",
+    "        return self.model\n",
     "    def evaluate_model(self, X_test, y_test):\n",
     "        y_pred = self.model.predict(X_test)\n",
     "        print(\"Classification Report:\")\n",
     "        print(classification_report(y_test, y_pred))\n",
     "        cm = confusion_matrix(y_test,\n",
     "        y_pred)\n",
-    "        plt.figure(figsize=(8, 6))\n",
+    "        plt.figure(figsize=(3, 3))\n",
     "        sns.heatmap(cm, annot=True, fmt='d',\n",
     "        cmap='Blues')\n",
     "        plt.title('Confusion Matrix')\n",
@@ -110,7 +120,7 @@
     "        fpr, tpr, _ = roc_curve(y_test,\n",
     "        y_pred_proba)\n",
     "        roc_auc = auc(fpr, tpr)\n",
-    "        plt.figure(figsize=(8, 6))\n",
+    "        plt.figure(figsize=(4, 4))\n",
     "        plt.plot(fpr, tpr, color='darkorange', lw=2, label=f'ROC curve (AUC = {roc_auc:.2f})')\n",
     "        plt.plot([0, 1], [0, 1], color='navy', lw=2, linestyle='--')\n",
     "        plt.xlim([0.0, 1.0])\n",
@@ -120,10 +130,68 @@
     "        plt.title('Receiver Operating Characteristic (ROC) Curve')\n",
     "        plt.legend(loc=\"lower right\")\n",
     "        plt.show()\n",
+    "    def verify_with_gru(self, X_train, X_test, y_train, y_test, epochs=30, batch_size=32):\n",
+    "        # Scale features for neural network\n",
+    "        scaler = StandardScaler()\n",
+    "        X_train_scaled = scaler.fit_transform(X_train)\n",
+    "        X_test_scaled = scaler.transform(X_test)\n",
+    "        \n",
+    "        # Reshape input for GRU: (samples, timesteps, features)\n",
+    "        # If your data isn’t sequential, we treat each feature vector as a single time step\n",
+    "        X_train_scaled = X_train_scaled.reshape((X_train_scaled.shape[0], 1, X_train_scaled.shape[1]))\n",
+    "        X_test_scaled = X_test_scaled.reshape((X_test_scaled.shape[0], 1, X_test_scaled.shape[1]))\n",
+    "        \n",
+    "        # Build GRU model\n",
+    "        model = Sequential([\n",
+    "            GRU(64, input_shape=(X_train_scaled.shape[1], X_train_scaled.shape[2]), return_sequences=False),\n",
+    "            Dropout(0.3),\n",
+    "            Dense(32, activation='relu'),\n",
+    "            Dense(1, activation='sigmoid')\n",
+    "        ])\n",
+    "        \n",
+    "        # Compile model\n",
+    "        model.compile(optimizer=Adam(learning_rate=0.001), loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "        \n",
+    "        # Train GRU\n",
+    "        history = model.fit(\n",
+    "            X_train_scaled, y_train,\n",
+    "            epochs=epochs,\n",
+    "            batch_size=batch_size,\n",
+    "            validation_split=0.2,\n",
+    "            verbose=1\n",
+    "        )\n",
+    "        \n",
+    "        # Predict on test set\n",
+    "        y_pred_prob = model.predict(X_test_scaled)\n",
+    "        y_pred = (y_pred_prob > 0.5).astype(int)\n",
+    "        \n",
+    "        # Evaluate performance\n",
+    "        gru_f1 = f1_score(y_test, y_pred)\n",
+    "        gru_acc = accuracy_score(y_test, y_pred)\n",
+    "        \n",
+    "        print(f\"\\n✅ GRU Model Evaluation:\")\n",
+    "        print(f\"Accuracy: {gru_acc:.4f}\")\n",
+    "        print(f\"F1 Score: {gru_f1:.4f}\")\n",
+    "        \n",
+    "        # Compare with Random Forest\n",
+    "        rf_pred = self.model.predict(X_test)\n",
+    "        rf_f1 = f1_score(y_test, rf_pred)\n",
+    "        rf_acc = accuracy_score(y_test, rf_pred)\n",
+    "        \n",
+    "        print(f\"\\n📊 Random Forest vs GRU Comparison:\")\n",
+    "        print(f\"Random Forest - Accuracy: {rf_acc:.4f}, F1: {rf_f1:.4f}\")\n",
+    "        print(f\"GRU Model     - Accuracy: {gru_acc:.4f}, F1: {gru_f1:.4f}\")\n",
+    "        \n",
+    "        # Optional: return both models’ scores for analysis\n",
+    "        return {\n",
+    "            'random_forest': {'accuracy': rf_acc, 'f1': rf_f1},\n",
+    "            'gru': {'accuracy': gru_acc, 'f1': gru_f1}\n",
+    "        }\n",
+    "\n",
     "    def analyze_feature_importance(self):\n",
     "        importances = self.model.feature_importances_\n",
     "        indices = np.argsort(importances)[::-1]\n",
-    "        plt.figure(figsize=(12, 6))\n",
+    "        plt.figure(figsize=(8, 4))\n",
     "        plt.title('Feature Importance for Failure Prediction')\n",
     "        plt.bar(range(len(importances)), importances[indices])\n",
     "        plt.xticks(range(len(importances)), [self.feature_names[i] for i in indices], rotation=45)\n",
@@ -131,7 +199,7 @@
     "        plt.show()\n",
     "    def correlation_heatmap(self, data):\n",
     "        correlation_matrix = data.corr()\n",
-    "        plt.figure(figsize=(10, 8))\n",
+    "        plt.figure(figsize=(8, 6))\n",
     "        sns.heatmap(correlation_matrix,\n",
     "        annot=True, fmt='.2f', cmap='coolwarm')\n",
     "        plt.title('Feature Correlation Heatmap')\n",
@@ -164,7 +232,7 @@
     "        plt.show()\n",
     "    def time_series_plot(self, data):\n",
     "        time_grouped = data.groupby(data['timestamp'].dt.date)['is_failure'].mean()\n",
-    "        plt.figure(figsize=(15, 5))\n",
+    "        plt.figure()\n",
     "        plt.plot(time_grouped.index,time_grouped.values, marker='o',color='teal')\n",
     "        plt.title('Average Failure ProbabilityOver Time')\n",
     "        plt.xlabel('Date')\n",
@@ -186,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abe4034c",
+   "id": "55f4a011",
    "metadata": {},
    "outputs": [],
    "source": []
