--- a/RoboticSystemModel.ipynb
+++ b/RoboticSystemModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "67d904b8",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "53e359b3",
    "metadata": {},
    "outputs": [],
@@ -28,41 +28,146 @@
     "        self.battery_level = 100\n",
     "        self.synthetic_data = synthetic_data\n",
     "        self.current_index = 0\n",
+    "        self.failure_log = []\n",
+    "    def analyze_failure_reasons(self, data):\n",
+    "        reasons = []\n",
+    "        \n",
+    "        if data['system_temperature'] > 70:\n",
+    "            reasons.append(f\"High System Temperature ({data['system_temperature']:.2f}°C > 70°C)\")\n",
+    "        \n",
+    "        if data['power_unit_temperature'] > 80:\n",
+    "            reasons.append(f\"High Power Unit Temperature ({data['power_unit_temperature']:.2f}°C > 80°C)\")\n",
+    "        \n",
+    "        if data['system_vibration'] > 2.0:\n",
+    "            reasons.append(f\"Excessive System Vibration ({data['system_vibration']:.2f} mm/s > 2.0 mm/s)\")\n",
+    "        \n",
+    "        if data['power_unit_vibration'] > 2.5:\n",
+    "            reasons.append(f\"Excessive Power Unit Vibration ({data['power_unit_vibration']:.2f} mm/s > 2.5 mm/s)\")\n",
+    "        \n",
+    "        if data['operational_hours'] > 4000:\n",
+    "            reasons.append(f\"High Operational Hours ({data['operational_hours']:.2f} > 4000 hours)\")\n",
+    "        \n",
+    "        if data['duty_cycle'] > 80:\n",
+    "            reasons.append(f\"High Duty Cycle ({data['duty_cycle']:.2f}% > 80%)\")\n",
+    "        \n",
+    "        if data['days_since_maintenance'] > 300:\n",
+    "            reasons.append(f\"Overdue Maintenance ({data['days_since_maintenance']:.2f} days > 300 days)\")\n",
+    "        \n",
+    "        if data['previous_failures'] > 2:\n",
+    "            reasons.append(f\"Multiple Previous Failures ({data['previous_failures']} > 2)\")\n",
+    "        \n",
+    "        if data['hydraulic_pressure'] < 1200 or data['hydraulic_pressure'] > 2800:\n",
+    "            reasons.append(f\"Hydraulic Pressure Out of Range ({data['hydraulic_pressure']:.2f} kPa)\")\n",
+    "        \n",
+    "        if abs(data['voltage_fluctuation']) > 0.4:\n",
+    "            reasons.append(f\"High Voltage Fluctuation ({data['voltage_fluctuation']:.2f} V)\")\n",
+    "        \n",
+    "        if self.battery_level < 20:\n",
+    "            reasons.append(f\"Low Battery Level ({self.battery_level:.2f}%)\")\n",
+    "        \n",
+    "        return reasons\n",
+    "    \n",
     "    def move_to_position(self, target_position):\n",
+    "        if self.current_index >= len(self.synthetic_data):\n",
+    "            print(\"No more synthetic data available\")\n",
+    "            return\n",
+    "        \n",
     "        data = self.synthetic_data.iloc[self.current_index]\n",
-    "        initial_temperature = data['system_temperature']\n",
-    "        initial_voltage = data['voltage_fluctuation']\n",
-    "        initial_current = data['current_draw']\n",
+    "        row_number = self.current_index\n",
+    "        \n",
+    "        print(f\"\\n{'='*60}\")\n",
+    "        print(f\"MOVEMENT OPERATION - Row #{row_number}\")\n",
+    "        print(f\"{'='*60}\")\n",
     "        print(f\"Initial System Metrics:\")\n",
-    "        print(f\"Temperature: {initial_temperature}°C, Voltage: {initial_voltage} V, Current: {initial_current} A\")\n",
-    "        print(f\"Moving from {self.position} to {target_position}...\")\n",
+    "        print(f\"  Temperature: {data['system_temperature']:.2f}°C\")\n",
+    "        print(f\"  Voltage: {data['voltage_fluctuation']:.2f} V\")\n",
+    "        print(f\"  Current: {data['current_draw']:.2f} A\")\n",
+    "        print(f\"\\nMoving from {self.position} to {target_position}...\")\n",
+    "        \n",
     "        distance = np.sqrt(sum((np.array(target_position) - np.array(self.position)) ** 2))\n",
     "        time_required = distance / self.speed\n",
-    "        time.sleep(min(1, time_required))\n",
+    "        time.sleep(min(0.5, time_required))\n",
+    "        \n",
     "        self.position = target_position\n",
     "        self.battery_level -= distance * 0.1\n",
+    "        \n",
     "        print(f\"Position updated: {self.position}\")\n",
     "        print(f\"Remaining Battery Level: {self.battery_level:.2f}%\")\n",
-    "        print(f\"Temperature Change: {data['system_temperature']}°C\")\n",
-    "        print(f\"Voltage Fluctuation: {data['voltage_fluctuation']} V\")\n",
-    "        print(f\"Current Draw: {data['current_draw']} A\")\n",
-    "        if data['is_failure'] == 1 or self.battery_level < 20:\n",
+    "        print(f\"Temperature: {data['system_temperature']:.2f}°C\")\n",
+    "        print(f\"Voltage Fluctuation: {data['voltage_fluctuation']:.2f} V\")\n",
+    "        print(f\"Current Draw: {data['current_draw']:.2f} A\")\n",
+    "        \n",
+    "        failure_reasons = self.analyze_failure_reasons(data)\n",
+    "        \n",
+    "        if data['is_failure'] == 1 or failure_reasons:\n",
     "            self.status = \"Maintenance Required\"\n",
-    "        print(f\"System Status: {self.status}\")\n",
-    "        self.current_index += 1 \n",
+    "            print(f\"\\n{'!'*60}\")\n",
+    "            print(f\"⚠️ MOVEMENT FAILURE DETECTED - Row #{row_number}\")\n",
+    "            print(f\"{'!'*60}\")\n",
+    "            print(f\"Failure Reasons:\")\n",
+    "            for i, reason in enumerate(failure_reasons, 1):\n",
+    "                print(f\"  {i}. {reason}\")\n",
+    "            \n",
+    "            self.failure_log.append({\n",
+    "                'row_number': row_number,\n",
+    "                'operation': 'Movement',\n",
+    "                'position': target_position,\n",
+    "                'reasons': failure_reasons,\n",
+    "                'data': data.to_dict()\n",
+    "            })\n",
+    "        else:\n",
+    "            print(f\"✓ Movement completed successfully - All systems nominal\")\n",
+    "        \n",
+    "        print(f\"\\nSystem Status: {self.status}\")\n",
+    "        self.current_index += 1\n",
+    "    \n",
     "    def perform_task(self, task):\n",
-    "        print(f\"Performing task: {task}...\")\n",
-    "        time.sleep(2)\n",
+    "        if self.current_index >= len(self.synthetic_data):\n",
+    "            print(\"No more synthetic data available\")\n",
+    "            return\n",
+    "        \n",
+    "        row_number = self.current_index\n",
+    "        \n",
+    "        print(f\"\\n{'='*60}\")\n",
+    "        print(f\"TASK EXECUTION: {task} - Row #{row_number}\")\n",
+    "        print(f\"{'='*60}\")\n",
+    "        print(f\"Executing task: {task}...\")\n",
+    "        time.sleep(0.5)\n",
+    "        \n",
     "        self.battery_level -= 5\n",
     "        data = self.synthetic_data.iloc[self.current_index]\n",
-    "        print(f\"Task '{task}' completed successfully.\")\n",
+    "        \n",
+    "        print(f\"Task '{task}' execution completed.\")\n",
     "        print(f\"Remaining Battery Level: {self.battery_level:.2f}%\")\n",
-    "        print(f\"Hydraulic Pressure: {data['hydraulic_pressure']} kPa\")\n",
-    "        print(f\"Load Capacity: {data['load_capacity']}%\")\n",
-    "        if data['is_failure'] == 1 or self.battery_level < 20:\n",
+    "        print(f\"Hydraulic Pressure: {data['hydraulic_pressure']:.2f} kPa\")\n",
+    "        print(f\"Load Capacity: {data['load_capacity']:.2f}%\")\n",
+    "        print(f\"System Vibration: {data['system_vibration']:.2f} mm/s\")\n",
+    "        print(f\"Power Unit Temperature: {data['power_unit_temperature']:.2f}°C\")\n",
+    "        \n",
+    "        failure_reasons = self.analyze_failure_reasons(data)\n",
+    "        \n",
+    "        if data['is_failure'] == 1 or failure_reasons:\n",
     "            self.status = \"Maintenance Required\"\n",
-    "        print(f\"System Status: {self.status}\")\n",
+    "            print(f\"\\n{'!'*60}\")\n",
+    "            print(f\"⚠️ TASK FAILURE DETECTED - Row #{row_number}\")\n",
+    "            print(f\"{'!'*60}\")\n",
+    "            print(f\"Failure Reasons:\")\n",
+    "            for i, reason in enumerate(failure_reasons, 1):\n",
+    "                print(f\"  {i}. {reason}\")\n",
+    "            \n",
+    "            self.failure_log.append({\n",
+    "                'row_number': row_number,\n",
+    "                'operation': f'Task: {task}',\n",
+    "                'position': self.position,\n",
+    "                'reasons': failure_reasons,\n",
+    "                'data': data.to_dict()\n",
+    "            })\n",
+    "        else:\n",
+    "            print(f\"✓ Task completed successfully - All systems nominal\")\n",
+    "\n",
+    "        print(f\"\\nSystem Status: {self.status}\")\n",
     "        self.current_index += 1\n",
+    "\n",
     "    def check_status(self):\n",
     "        print(f\"System Status: {self.status}\")\n",
     "    def analyze_tasks(self, tasks):\n",
@@ -72,7 +177,7 @@
     "            self.move_to_position(task['position'])\n",
     "            self.perform_task(task['name'])\n",
     "            if self.status == \"Maintenance Required\":\n",
-    "                failure_tasks.append(task['name' ])\n",
+    "                failure_tasks.append(task['name'])\n",
     "        plt.figure(figsize=(10, 6))\n",
     "        task_names = [task['name'] for task in tasks]\n",
     "        battery_levels = [self.synthetic_data.iloc[i]['current_draw'] for i in range(len(tasks))]\n",
@@ -84,6 +189,7 @@
     "        plt.tight_layout()\n",
     "        plt.show()\n",
     "        print(f\"Tasks where failure occurred: {failure_tasks}\")\n",
+    "    @staticmethod\n",
     "    def visualize_3d_risk(data):\n",
     "        fig = go.Figure()\n",
     "        fig.add_trace(go.Scatter3d(x=data['system_temperature'], y=data['system_vibration'], z=data['hydraulic_pressure'], mode='markers',\n",
