Integarated csv files

--- a/MilitaryRoboticSystemMaintenance.ipynb
+++ b/MilitaryRoboticSystemMaintenance.ipynb
@@ -2,10 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ea99c0f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-10-08 20:28:33.232867: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-10-08 20:28:33.240804: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-10-08 20:28:33.262808: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1759935513.299184   49106 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1759935513.309804   49106 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "W0000 00:00:1759935513.339313   49106 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1759935513.339362   49106 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1759935513.339368   49106 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1759935513.339374   49106 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "2025-10-08 20:28:33.348944: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -20,8 +39,7 @@
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import GRU, Dense, Dropout\n",
     "from tensorflow.keras.optimizers import Adam\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import f1_score, accuracy_score\n"
+    "from sklearn.metrics import f1_score, accuracy_score"
    ]
   },
   {
@@ -39,33 +57,32 @@
     "\n",
     "    def generate_synthetic_data(self, n_samples=1000):\n",
     "        df = pd.read_csv('smart_manufacturing_temperature_regulation.csv')\n",
+    "        iot_df = pd.read_csv('industrial_fault_detection_data.csv')\n",
+    "        robot_df = pd.read_csv('industrial_robot_control.csv')\n",
+    "        np.random.seed(42)\n",
     "        current_temperature = df['Current Temperature (°C)'].values\n",
     "        setpoint_temperature = df['Setpoint Temperature (°C)'].values  \n",
     "        ambient_temperature = df['Ambient Temperature (°C)'].values\n",
-    "        np.random.seed(42)\n",
+    "        system_vibration = iot_df['Vibration (mm/s)'].values\n",
+    "        hydraulic_pressure = iot_df['Pressure (bar)'].values\n",
+    "        operational_hours = robot_df['task_duration'].values\n",
+    "        current_draw = robot_df['energy_consumption'].values[:n_samples]\n",
+    "\n",
     "        data = {\n",
     "        'system_temperature': current_temperature,\n",
     "        'power_unit_temperature': setpoint_temperature,\n",
     "        'ambient_temperature': ambient_temperature,\n",
-    "        'system_vibration': np.random.uniform(0.1, 2.5, n_samples),\n",
-    "        'power_unit_vibration':  np.random.uniform(0.2, 3.0, n_samples),\n",
-    "        'hydraulic_pressure': np.random.uniform(1000, 3000,n_samples),\n",
-    "        'voltage_fluctuation': np.random.uniform(-0.5, 0.5, n_samples),\n",
-    "        'current_draw': np.random.uniform(10, 30, n_samples),\n",
-    "        'operational_hours': np.random.uniform(0, 5000, n_samples),\n",
-    "        'duty_cycle': np.random.uniform(20, 90, n_samples),\n",
-    "        'load_capacity': np.random.uniform(40, 100, n_samples),\n",
-    "        'days_since_maintenance': np.random.uniform(0, 365, n_samples),\n",
-    "        'previous_failures': np.random.poisson(0.5, n_samples)\n",
+    "        'system_vibration': system_vibration,\n",
+    "        'hydraulic_pressure': hydraulic_pressure,\n",
+    "        'current_draw': current_draw,\n",
+    "        'operational_hours': operational_hours,\n",
+    "        'previous_failures' : robot_df['error_rate'].values * 10,\n",
     "        }\n",
     "        failure_probability = (\n",
     "            0.3 * (data['system_temperature'] > 70).astype(int) +\n",
     "            0.4 * (data['power_unit_temperature'] > 80).astype(int) +\n",
     "            0.4 * (data['system_vibration'] > 2.0).astype(int) +\n",
-    "            0.3 * (data['power_unit_vibration'] > 2.5).astype(int) +\n",
     "            0.2 * (data['operational_hours'] > 4000).astype(int) +\n",
-    "            0.3 * (data['duty_cycle'] > 80).astype(int) +\n",
-    "            0.4 * (data['days_since_maintenance'] > 300).astype(int) +\n",
     "            0.3 * (data['previous_failures'] > 2).astype(int)\n",
     "        ) / 2.7\n",
     "        data['is_failure'] = np.random.binomial(1, failure_probability)\n",
@@ -80,28 +97,14 @@
     "        X_scaled = self.scaler.fit_transform(X)\n",
     "        return train_test_split(X_scaled, y, test_size=0.3, random_state=42)\n",
     "    def train_model(self, X_train, y_train):\n",
-    "        rf = RandomForestClassifier(random_state=42)\n",
-    "        param_dist = {\n",
-    "            'n_estimators': np.arange(50, 300, 50), \n",
-    "            'max_depth': [5, 10, 15, 20, None],\n",
-    "            'min_samples_split': [2, 5, 10, 20],\n",
-    "            'min_samples_leaf': [1, 2, 4, 8],   \n",
-    "            'max_features': ['sqrt', 'log2', None],\n",
-    "            'bootstrap': [True, False]                 \n",
-    "        }\n",
-    "        random_search = RandomizedSearchCV(\n",
-    "            estimator=rf,\n",
-    "            param_distributions=param_dist,\n",
-    "            n_iter=30,\n",
-    "            cv=5,\n",
-    "            scoring='f1',\n",
-    "            verbose=1,\n",
-    "            n_jobs=-1,\n",
-    "            random_state=42\n",
+    "        self.model = RandomForestClassifier(\n",
+    "        n_estimators=100,\n",
+    "        max_depth=10,\n",
+    "        min_samples_split=5,\n",
+    "        min_samples_leaf=2,\n",
+    "        random_state=42\n",
     "        )\n",
-    "        random_search.fit(X_train, y_train)\n",
-    "        self.model = random_search.best_estimator_\n",
-    "        return self.model\n",
+    "        self.model.fit(X_train, y_train)\n",
     "    def evaluate_model(self, X_test, y_test):\n",
     "        y_pred = self.model.predict(X_test)\n",
     "        print(\"Classification Report:\")\n",
@@ -211,14 +214,9 @@
     "        'power_unit_temperature',\n",
     "        'ambient_temperature',\n",
     "        'system_vibration',\n",
-    "        'power_unit_vibration',\n",
     "        'hydraulic_pressure',\n",
-    "        'voltage_fluctuation',\n",
     "        'current_draw',\n",
     "        'operational_hours',\n",
-    "        'duty_cycle',\n",
-    "        'load_capacity',\n",
-    "        'days_since_maintenance',\n",
     "        'previous_failures'\n",
     "        ]\n",
     "        plt.figure(figsize=(15, 10))\n",
@@ -253,8 +251,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "55f4a011",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['robot_id', 'task_type', 'task_duration', 'energy_consumption',\n",
+       "       'position_coordinates', 'robot_speed', 'sensor_id', 'sensor_type',\n",
+       "       'sensor_reading', 'timestamp', 'data_size', 'network_load',\n",
+       "       'network_latency', 'packet_loss_rate', 'network_type', 'slice_id',\n",
+       "       'slice_bandwidth', 'command_delay', 'feedback_delay',\n",
+       "       'data_transfer_time', 'total_delay', 'signal_strength', 'latency',\n",
+       "       'resource_allocation', 'error_rate'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "robot_df = pd.read_csv('industrial_robot_control.csv')\n",
+    "robot_df.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2f25ad10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('smart_manufacturing_temperature_regulation.csv')\n",
+    "iot_df = pd.read_csv('industrial_fault_detection_data.csv')\n",
+    "robot_df = pd.read_csv('industrial_robot_control.csv')\n",
+    "min_length = min(len(df), len(iot_df), len(robot_df))\n",
+    "print(min_length)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c63ac118",
    "metadata": {},
    "outputs": [],
    "source": []
