--- a/MilitaryRoboticSystemMaintenance.ipynb
+++ b/MilitaryRoboticSystemMaintenance.ipynb
@@ -84,7 +84,7 @@
     "            0.4 * (data['system_vibration'] > 2.0).astype(int) +\n",
     "            0.2 * (data['operational_hours'] > 4000).astype(int) +\n",
     "            0.3 * (data['previous_failures'] > 2).astype(int)\n",
-    "        ) / 2.7\n",
+    "        ) / 1.6\n",
     "        data['is_failure'] = np.random.binomial(1, failure_probability)\n",
     "        df = pd.DataFrame(data)\n",
     "        df['timestamp'] = pd.date_range(start='2024-01-01',\n",
@@ -98,8 +98,8 @@
     "        return train_test_split(X_scaled, y, test_size=0.3, random_state=42)\n",
     "    def train_model(self, X_train, y_train):\n",
     "        self.model = RandomForestClassifier(\n",
-    "        n_estimators=100,\n",
-    "        max_depth=10,\n",
+    "        n_estimators=20,\n",
+    "        max_depth=5,\n",
     "        min_samples_split=5,\n",
     "        min_samples_leaf=2,\n",
     "        random_state=42\n",
@@ -134,50 +134,35 @@
     "        plt.legend(loc=\"lower right\")\n",
     "        plt.show()\n",
     "    def verify_with_gru(self, X_train, X_test, y_train, y_test, epochs=30, batch_size=32):\n",
-    "        # Scale features for neural network\n",
-    "        scaler = StandardScaler()\n",
-    "        X_train_scaled = scaler.fit_transform(X_train)\n",
-    "        X_test_scaled = scaler.transform(X_test)\n",
-    "        \n",
-    "        # Reshape input for GRU: (samples, timesteps, features)\n",
-    "        # If your data isn’t sequential, we treat each feature vector as a single time step\n",
-    "        X_train_scaled = X_train_scaled.reshape((X_train_scaled.shape[0], 1, X_train_scaled.shape[1]))\n",
-    "        X_test_scaled = X_test_scaled.reshape((X_test_scaled.shape[0], 1, X_test_scaled.shape[1]))\n",
+    "        X_test_rf = X_test\n",
+    "        # 🔹 Reshape for GRU (3D)\n",
+    "        X_train = X_train.reshape((X_train.shape[0], 1, X_train.shape[1]))\n",
+    "        X_test = X_test.reshape((X_test.shape[0], 1, X_test.shape[1]))\n",
     "        \n",
     "        # Build GRU model\n",
     "        model = Sequential([\n",
-    "            GRU(64, input_shape=(X_train_scaled.shape[1], X_train_scaled.shape[2]), return_sequences=False),\n",
+    "            GRU(64, input_shape=(X_train.shape[1], X_train.shape[2]), return_sequences=False),\n",
     "            Dropout(0.3),\n",
     "            Dense(32, activation='relu'),\n",
     "            Dense(1, activation='sigmoid')\n",
     "        ])\n",
     "        \n",
-    "        # Compile model\n",
+    "        # Compile and train\n",
     "        model.compile(optimizer=Adam(learning_rate=0.001), loss='binary_crossentropy', metrics=['accuracy'])\n",
-    "        \n",
-    "        # Train GRU\n",
-    "        history = model.fit(\n",
-    "            X_train_scaled, y_train,\n",
-    "            epochs=epochs,\n",
-    "            batch_size=batch_size,\n",
-    "            validation_split=0.2,\n",
-    "            verbose=1\n",
-    "        )\n",
+    "        history = model.fit(X_train, y_train, epochs=epochs, batch_size=batch_size, validation_split=0.2, verbose=1)\n",
     "        \n",
     "        # Predict on test set\n",
-    "        y_pred_prob = model.predict(X_test_scaled)\n",
+    "        y_pred_prob = model.predict(X_test)\n",
     "        y_pred = (y_pred_prob > 0.5).astype(int)\n",
     "        \n",
-    "        # Evaluate performance\n",
+    "        # Evaluate GRU\n",
     "        gru_f1 = f1_score(y_test, y_pred)\n",
     "        gru_acc = accuracy_score(y_test, y_pred)\n",
-    "        \n",
     "        print(f\"\\n✅ GRU Model Evaluation:\")\n",
     "        print(f\"Accuracy: {gru_acc:.4f}\")\n",
     "        print(f\"F1 Score: {gru_f1:.4f}\")\n",
     "        \n",
-    "        # Compare with Random Forest\n",
-    "        rf_pred = self.model.predict(X_test)\n",
+    "        rf_pred = self.model.predict(X_test_rf)\n",
     "        rf_f1 = f1_score(y_test, rf_pred)\n",
     "        rf_acc = accuracy_score(y_test, rf_pred)\n",
     "        \n",
@@ -185,7 +170,6 @@
     "        print(f\"Random Forest - Accuracy: {rf_acc:.4f}, F1: {rf_f1:.4f}\")\n",
     "        print(f\"GRU Model     - Accuracy: {gru_acc:.4f}, F1: {gru_f1:.4f}\")\n",
     "        \n",
-    "        # Optional: return both models’ scores for analysis\n",
     "        return {\n",
     "            'random_forest': {'accuracy': rf_acc, 'f1': rf_f1},\n",
     "            'gru': {'accuracy': gru_acc, 'f1': gru_f1}\n",
@@ -248,65 +232,6 @@
     "        labels=['Low', 'Medium', 'High'])})\n",
     "        return predictions"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "55f4a011",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['robot_id', 'task_type', 'task_duration', 'energy_consumption',\n",
-       "       'position_coordinates', 'robot_speed', 'sensor_id', 'sensor_type',\n",
-       "       'sensor_reading', 'timestamp', 'data_size', 'network_load',\n",
-       "       'network_latency', 'packet_loss_rate', 'network_type', 'slice_id',\n",
-       "       'slice_bandwidth', 'command_delay', 'feedback_delay',\n",
-       "       'data_transfer_time', 'total_delay', 'signal_strength', 'latency',\n",
-       "       'resource_allocation', 'error_rate'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "robot_df = pd.read_csv('industrial_robot_control.csv')\n",
-    "robot_df.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "2f25ad10",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1000\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv('smart_manufacturing_temperature_regulation.csv')\n",
-    "iot_df = pd.read_csv('industrial_fault_detection_data.csv')\n",
-    "robot_df = pd.read_csv('industrial_robot_control.csv')\n",
-    "min_length = min(len(df), len(iot_df), len(robot_df))\n",
-    "print(min_length)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c63ac118",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
